# rinha-2026-python1

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LOCAL_TESTING.md  Makefile  QUICK_TEST.md  README.md  SUBMISSION.md  SUBMISSION_CHECKLIST.md  SUBMISSION_REVIEW.md  docker-compose.yml  info.json  nginx.conf  pyproject.toml  requirements.txt  setup.py  test_change.py
.github/workflows/: build-image.yml
docs/: API.md  DATASET.md  DETECTION_RULES.md  EVALUATION.md  FAQ.md  GUIDELINES.md  README.md  SUBMISSION.md  VECTOR_SEARCH.md
docs/project_example/: NODE_EXAMPLE.md  PYTHON_EXAMPLE.md  RUST_EXAMPLE.md
src/: _fraud.c  pack.py  server.py
src/rinha_fraud_detection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: results.json
