[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rinha-fraud-detection"
version = "1.0.0"
description = "Fraud detection API for Rinha de Backend 2026"
authors = [
    {name = "Renan de Moraes", email = "renan@example.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0",
    "uvicorn[standard]>=0.30.0",
    "orjson>=3.10.0",
    "ijson>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"